# SapotaDB

./: .gitignore  CMakeLists.txt  build.ps1  cli.py  enginebuild.ps1
engine/: kv_engine.py
query/: parser.py
src/cli/: main.cpp
src/engine/: engine.cpp  engine.hpp
src/log/: log_manager.cpp  log_manager.hpp
src/storage/: mvcc.cpp  mvcc.hpp
src/tx/: tx.cpp  tx.hpp
storage/: file_manager.py  memory_table.py
